--- a/public/app/eventComponents/gamesList.directive.htm
+++ b/public/app/eventComponents/gamesList.directive.htm
@@ -7,11 +7,13 @@
 
 	<div class="col l4 m6 s12" ng-repeat="game in event.gameList | orderBy:'name'">
 		<a class="modal-trigger" ng-click="event.openGameModal(game.name)">
-			<div class="card-panel hoverable z-depth-1 grey lighten-2 waves-effect waves-teal" style="height: 90px; width: 100%;">
+			<div class="card-panel hoverable z-depth-1 grey lighten-2 waves-effect waves-teal game-card" 
+			     style="height: 90px; width: 100%;"
+			     ng-class="'bg' + game.mameSet">
 				<div class="row valign-wrapper">
 					<div class="col s12">
-						<h6 class="truncate grey-text text-darken-4">{{ game.name }}</h6>
-						<p class="truncate grey-text text-darken-1">
+						<h6 class="truncate grey-text text-darken-4"><strong>{{ game.name }}</strong></h6>
+						<p class="truncate grey-text text-darken-4">
 						    {{ game.firstScore.userName }} &ndash; {{ game.firstScore.score | number }}
 						</p>
 					</div>
