--- a/public/app/eventComponents/teamTeamsLeaderboard.directive.htm
+++ b/public/app/eventComponents/teamTeamsLeaderboard.directive.htm
@@ -6,8 +6,9 @@
 	<ul class="collection z-depth-1">
 		<a ng-click="event.openTeamScoresModal(teamData)" 
 		   ng-repeat="teamData in event.teamSummarizedLeaderboard | orderBy:'-points'">
-			<li class="waves-effect waves-teal collection-item hoverable" 
+			<li class="waves-effect waves-teal collection-item avatar hoverable" 
 			    style="height: 62px; width: 100%">
+			    <img ng-attr-src="{{ '../../../images/teams/' + teamData.key + '.png' }}" class="circle z-depth-1">
 				<span class="title grey-text text-darken-4">{{ teamData.fullName || "No Name" }}</span><br>
 				<span class="grey-text text-darken-1">{{ $index + 1 | ordinal }} &ndash; {{ teamData.points }}</span>
 			</li>
