(fix): streamers list display on short names

--- a/public/app/eventComponents/streamerList.directive.htm
+++ b/public/app/eventComponents/streamerList.directive.htm
@@ -7,7 +7,7 @@
 	<div ng-repeat="streamer in vm.activeStreamerList" class="col s12 m4">
 		<a ng-href="{{ 'http://twitch.tv/' + streamer.twitch }}" target="_blank" class="hoverable">
 			<p class="col s12 m4 grey-text text-darken-4 hoverable" style="padding-bottom: 10px;">
-				{{ streamer.userName }}, {{ streamer.team }}
+				{{ streamer.userName }},<br> {{ streamer.team }}
 			</p>
 		</a>
 	</div>
