(fix): correct modals now open

--- a/public/app/event/modals/modalPlayer.htm
+++ b/public/app/event/modals/modalPlayer.htm
@@ -37,7 +37,7 @@
 					               'text-darken-4':  scoreData.pointsEarned > 0}">
 						<td>{{ scoreData.position }}</td>
 						<td>
-						    <a ng-click="event.openGameModal(scoreData.camelName)" class="hoverable">
+						    <a ng-click="event.openGameModal(scoreData.name)" class="hoverable">
 						        {{ scoreData.name }}
 						    </a>
 						</td>
