--- a/public/app/event/modals/modalTeamScores.htm
+++ b/public/app/event/modals/modalTeamScores.htm
@@ -30,7 +30,7 @@
 					    ng-class="{'text-lighten-1': scoreData.points === 0,
 					               'text-darken-4':  scoreData.points > 0}">
 						<td>
-						    <a ng-click="event.openGameModal(scoreData.camelName)" class="hoverable">
+						    <a ng-click="event.openGameModal(scoreData.name)" class="hoverable">
 						        {{ scoreData.name }}
 						    </a>
 						</td>
