--- a/public/app/event/modals/modalLogs.htm
+++ b/public/app/event/modals/modalLogs.htm
@@ -11,7 +11,7 @@
 			</p>
 
 			<p class="grey-text text-darken-4" ng-repeat="log in event.eventLogs | orderBy:'-$id' | limitTo:100">
-				{{ log.team }}.{{ log.userName }} scored {{ log.score }} on {{ log.game }}.&nbsp;
+				{{ log.team }}.{{ log.userName }} scored {{ log.score | number }} on {{ log.game }}.&nbsp;
 				<a ng-attr-href="{{ 'http://' + log.twitchUrl }}" 
 				   class="grey-text hoverable"
 				   ng-show="log.twitchUrl"
