--- a/public/index.htm
+++ b/public/index.htm
@@ -3,6 +3,7 @@
 
 <head>
 
+	<script src="//cdn.polyfill.io/v1/polyfill.min.js"></script>
 	<script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="materialize/dist/js/materialize.min.js"></script>
 	<script type="text/javascript" src="angular/angular.min.js"></script>
