(feat): better leaderboard UIs

--- a/public/app/eventComponents/teamPlayerLeaderboard.directive.htm
+++ b/public/app/eventComponents/teamPlayerLeaderboard.directive.htm
@@ -18,9 +18,17 @@
 		   ng-repeat="playerData in event.summarizedLeaderboard">
 			<li class="waves-effect waves-teal collection-item avatar hoverable" 
 			    style="height: 62px; width: 100%">
+
 			    <img ng-attr-src="{{ event.avatarData[playerData.key] }}" class="circle z-depth-1">
-				<span class="title grey-text text-darken-4">{{ playerData.key }}</span><br>
-				<span class="grey-text text-darken-1">{{ $index + 1 | ordinal }} &ndash; {{ playerData.points }}, {{ playerData.team }}</span>
+
+			    <div style="margin-top: 11px;">
+				    <span class="grey-text text-darken-1" style="font-size: 25px;">{{ $index + 1 }}</span>
+				    <span class="grey-text text-darken-4 truncate" style="vertical-align: top; padding-left: 20px;">
+				        {{ playerData.team }}.{{ playerData.key }}
+				    </span>
+				    <span class="grey-text text-darken-1" style="float: right;">{{ playerData.points | number }}</span>
+			    </div>
+
 			</li>
 		</a>
 	</ul>
