--- a/public/app/event/modals/modalMultiGameLeaderboard.htm
+++ b/public/app/event/modals/modalMultiGameLeaderboard.htm
@@ -16,16 +16,20 @@
 
 			<ul class="collection z-depth-1">
 				<a ng-click="event.openPlayerModal(playerData.key)" 
-				   ng-repeat="playerData in event.completeLeaderboard">
+				   ng-repeat="playerData in event.completeLeaderboard"
+				   ng-if="playerData.points > 0">
 				<li class="waves-effect waves-teal collection-item avatar hoverable" style="height: 62px;">
+
 				    <img ng-attr-src="{{ event.avatarData[playerData.key] }}" class="circle z-depth-1">
-					<span class="title grey-text text-darken-4">{{ playerData.key }}</span><br>
-					<span class="grey-text text-darken-1" ng-if="!playerData.position && playerData.points !== 0">
-					    {{ (playerData.position | ordinal) || $index+1 | ordinal }} &ndash; {{ playerData.points }}, {{ playerData.team }}
-					</span>
-					<span class="grey-text text-darken-1" ng-if="!playerData.position && playerData.points === 0">
-						0
-					</span>
+
+				    <div style="margin-top: 11px;">
+					    <span class="grey-text text-darken-1" style="font-size: 25px;">{{ (playerData.position) || $index+1 }}</span>
+					    <span class="grey-text text-darken-4 truncate" style="vertical-align: top; padding-left: 20px;">
+					        {{ playerData.team }}.{{ playerData.key }}
+					    </span>
+					    <span class="grey-text text-darken-1" style="float: right;">{{ playerData.points | number }}</span>
+				    </div>
+
 				</li>
 				</a>
 			</ul>
