--- a/public/app/event/modals/modalLogs.htm
+++ b/public/app/event/modals/modalLogs.htm
@@ -10,33 +10,99 @@
 				{{ event.eventProperties.submissions }} submissions.
 			</p>
 
-			<p class="grey-text text-darken-4" ng-repeat="log in event.eventLogs | orderBy:'-$id' | limitTo:100">
-				<span ng-if="log.time">
-				{{ log.team }}.{{ log.userName }} scored {{ log.score | number }} on {{ log.game }} at {{ log.time | date:'MM/dd/yyyy h:mma'}}.
-				</span>
-				<span ng-if="!log.time">
-				    {{ log.team }}.{{ log.userName }} scored {{ log.score | number }} on {{ log.game }}.
-				</span>
-				<a ng-attr-href="{{ 'http://' + log.twitchUrl }}" 
-				   class="grey-text hoverable"
-				   ng-show="log.twitchUrl"
-				   target="_blank">
-			        <i class="fa fa-lg fa-twitch"></i>&nbsp;
-			    </a>
+			<table class="responsive-table hoverable">
 
-			    <a ng-attr-href="{{ 'http://' + log.screenshotUrl }}" 
-				   class="grey-text hoverable"
-				   ng-show="log.screenshotUrl"
-				   target="_blank">
-			        <i class="fa fa-lg fa-file-image-o"></i>&nbsp;
-			    </a>
+				<thead>
+					<tr class="grey-text text-darken-1">
+						<th>Timestamp</th>
+						<th>Player</th>
+						<th>Game</th>
+						<th>Score</th>
+						<th>Links</th>
+					</tr>
+				</thead>
 
-			    <a ng-attr-href="{{ 'http://' + log.inpUrl }}" 
-			       class="grey-text hoverable"
-			       ng-show="log.inpUrl">
-			    	<i class="fa fa-lg fa-file-video-o"></i>&nbsp;<span>{{ log.mameVersion | lowercase }}</span>
-			    </a>
-			</p>
+				<tbody>
+					<tr ng-repeat="logData in event.eventLogs | orderBy:'-$id' | limitTo: 100" 
+					    class="grey-text text-darken-4">
+						<td>{{ (logData.time | date:'MM/dd h:mma') || "unknown" }}</td>
+					    <td>{{ logData.userName }}</td>
+					    <td>{{ logData.game }}</td>
+					    <td>{{ logData.score | number }}</td>
+					    <td>
+					    	<a ng-attr-href="{{ 'http://' + log.twitchUrl }}" 
+							   class="grey-text hoverable"
+							   ng-show="logData.twitchUrl"
+							   target="_blank">
+						        <i class="fa fa-lg fa-twitch"></i>&nbsp;
+						    </a>
+
+						    <a ng-attr-href="{{ 'http://' + log.screenshotUrl }}" 
+							   class="grey-text hoverable"
+							   ng-show="logData.screenshotUrl"
+							   target="_blank">
+						        <i class="fa fa-lg fa-file-image-o"></i>&nbsp;
+						    </a>
+
+						    <a ng-attr-href="{{ 'http://' + log.inpUrl }}" 
+						       class="grey-text hoverable"
+						       ng-show="logData.inpUrl">
+						    	<i class="fa fa-lg fa-file-video-o"></i>&nbsp;<span>{{ log.mameVersion | lowercase }}</span>
+						    </a>
+					    </td>
+					</tr>
+				</tbody>
+
+			</table>
+
+			<!--
+			<table class="responsive-table hoverable">
+
+				<thead>
+					<tr class="grey-text text-darken-1">
+						<th>Timestamp</th>
+						<th>Player</th>
+						<th>Game</th>
+						<th>Score</th>
+						<th>Links</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<tr ng-repeat="log in event.eventLogs | orderBy:'-$id' | limitTo: 100"
+					    class="grey-text text-darken-4">
+
+					    <td>{{ log.time | date:'MM/dd/yyyy h:mma'}}</td>
+					    <td>{{ log.userName }}</td>
+					    <td>{{ log.game }}</td>
+					    <td>{{ log.score | number }}</td>
+					    <td>
+					    	<a ng-attr-href="{{ 'http://' + log.twitchUrl }}" 
+							   class="grey-text hoverable"
+							   ng-show="log.twitchUrl"
+							   target="_blank">
+						        <i class="fa fa-lg fa-twitch"></i>&nbsp;
+						    </a>
+
+						    <a ng-attr-href="{{ 'http://' + log.screenshotUrl }}" 
+							   class="grey-text hoverable"
+							   ng-show="log.screenshotUrl"
+							   target="_blank">
+						        <i class="fa fa-lg fa-file-image-o"></i>&nbsp;
+						    </a>
+
+						    <a ng-attr-href="{{ 'http://' + log.inpUrl }}" 
+						       class="grey-text hoverable"
+						       ng-show="log.inpUrl">
+						    	<i class="fa fa-lg fa-file-video-o"></i>&nbsp;<span>{{ log.mameVersion | lowercase }}</span>
+						    </a>
+					    </td>
+
+					</tr>
+				</tbody>
+
+			</table>
+			-->
 
 		</div>
 	</div>
