(fix): remove margin bottom on recent activity title

--- a/public/app/event/main.htm
+++ b/public/app/event/main.htm
@@ -207,7 +207,7 @@
 
 			<!-- Recent Activity -->
 			<div ng-if="event.eventProperties.state === 'inprogress'">
-				<div class="row">
+				<div class="row" style="margin-bottom: 0px;">
 					<span class="col s12 flow-text grey-text text-darken-4">
 						Recent Activity
 					</span>
