--- a/public/app/event/modals/modalTeamScores.htm
+++ b/public/app/event/modals/modalTeamScores.htm
@@ -11,6 +11,16 @@
 		<div class="divider"></div>
 
 		<div class="section">
+			<h5>Roster</h5>
+
+			<p>
+				<span ng-repeat="rosterEntry in event.teamRoster">{{ rosterEntry.$id }}<span ng-if="!$last">, </span></span>
+			</p>
+		</div>
+
+		<div class="divider"></div>
+
+		<div class="section">
 			<h5>Player Rankings</h5>
 
 			<span class="flow-text text-darken-4" ng-if="event.teamPlayerScores.length === 0">
@@ -47,7 +57,7 @@
 		<div class="divider"></div>
 
 		<div class="section">
-			<h5>Game Rankings</h5>
+			<h5>Team Points</h5>
 
 			<span class="flow-text text-darken-4" ng-if="event.teamScores.length === 0">
 				This team does not have any points in the competition.
