(feat): be able to see all team standings

--- a/public/app/event/main.htm
+++ b/public/app/event/main.htm
@@ -7,6 +7,7 @@
 <ng-include src="'./app/event/modals/modalManagement.htm'"></ng-include>
 <ng-include src="'./app/event/modals/modalTeamScores.htm'"></ng-include>
 <ng-include src="'./app/event/modals/modalLogs.htm'"></ng-include>
+<ng-include src="'./app/event/modals/modalTeamLeaderboard.htm'"></ng-include>
 
 <div class="container">
 	
