--- a/public/app/eventComponents/teamTeamsLeaderboard.directive.htm
+++ b/public/app/eventComponents/teamTeamsLeaderboard.directive.htm
@@ -1,11 +1,21 @@
 <div class="col s12 m6">
 	<span class="flow-text grey-text text-darken-4">
 		Team Leaderboard
+		<a ng-if="event.teamLeaderboardLength > 8"
+		   class="btn-floating waves-effect waves-light blue-grey" 
+		   ng-click="event.openModal('#teamLeaderboardModal')">
+		    <i class="mdi-action-open-in-new"></i>
+		</a>
+
+		<a ng-if="event.teamLeaderboardLength <= 8"
+		   class="btn-floating disabled">
+		    <i class="mdi-action-open-in-new"></i>
+		</a>
 	</span>
 
 	<ul class="collection z-depth-1">
 		<a ng-click="event.openTeamScoresModal(teamData)" 
-		   ng-repeat="teamData in event.teamSummarizedLeaderboard | orderBy:'-points'">
+		   ng-repeat="teamData in event.teamSummarizedLeaderboard | orderBy:'-points' | limitTo:8">
 			<li class="waves-effect waves-teal collection-item avatar hoverable" 
 			    style="height: 62px; width: 100%">
 
